clean up code a bit

--- a/assets/text/textform.html
+++ b/assets/text/textform.html
@@ -1,2 +1,2 @@
-<input type="text" name="nameField" placeholder="Enter" style="font-size: 32px">
+<input type="text" name="nameFields" placeholder="Enter" style="font-size: 32px">
 <!-- <input type="button" name="playButton" value="Let's Play" style="font-size: 32px"> -->
